Bug 515968 - Text highlight doesn't follow font size consistently
Summary: Text highlight doesn't follow font size consistently
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 6.0.0-beta1
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-13 23:40 UTC by Vitamorus
Modified: 2026-03-01 15:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Demonstration of text highlight mismatching font size (1.30 MB, video/mp4)
2026-02-13 23:40 UTC, Vitamorus
Details
system info (16.63 KB, text/plain)
2026-02-13 23:42 UTC, Vitamorus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vitamorus 2026-02-13 23:40:58 UTC
Created attachment 189550 [details]
Demonstration of text highlight mismatching font size

SUMMARY
When highlighting text and resizing the font, it's easy for the highlight to get out of sync with the actual font size.

STEPS TO REPRODUCE
1. Create a new document
2. Create a text object with the text tool and click the text to highlight it
3. Edit the Font Size slider back and forth
4. The text highlighting goes out of sync with the font size

This was tested with Qt Platform Name:  "wayland". 
Attached is a video recording of the bug, along with additional system info.
Comment 1 Vitamorus 2026-02-13 23:42:33 UTC
Created attachment 189551 [details]
system info
Comment 2 wolthera 2026-03-01 15:38:24 UTC
Git commit c7c49cc01571fe86bd36eb4c4c4a75e6f481bbea by Wolthera van Hövell tot Westerflier.
Committed on 01/03/2026 at 15:38.
Pushed by woltherav into branch 'master'.

Update text selection decoration when changing markup.

M  +2    -0    plugins/tools/svgtexttool/SvgTextCursor.cpp

https://invent.kde.org/graphics/krita/-/commit/c7c49cc01571fe86bd36eb4c4c4a75e6f481bbea
Comment 3 wolthera 2026-03-01 15:39:26 UTC
Git commit 673b063a428c521109655dec0fa2027d9349ad81 by Wolthera van Hövell.
Committed on 01/03/2026 at 15:39.
Pushed by woltherav into branch 'krita/6.0'.

Update text selection decoration when changing markup.


(cherry picked from commit c7c49cc01571fe86bd36eb4c4c4a75e6f481bbea)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>

M  +2    -0    plugins/tools/svgtexttool/SvgTextCursor.cpp

https://invent.kde.org/graphics/krita/-/commit/673b063a428c521109655dec0fa2027d9349ad81