Update text selection decoration when changing markup.

BUG:515968